	--exclude=cygbuild-no-docdir-install

	* etc/template/Makefile.tmp (clean): Added comments next
	to targets.
	(ETCDIR): Remove extra $.

	* bin/cygbuild.sh: (CygbuildFileReadOptionsMaybe):
	Shorten displayed message.
	(CygbuildCmdBuildMain): Shorten displayed message.
	(CygbuildInstallPackageDocs): Support new option
	'cygbuild-no-docdir-install'.

2007-09-18  Jari Aalto  <jari.aalto@cante.net>

	* etc/etc/programs.conf (EGREP): Replace option
	--perl-regexp with --extended-regexp.
	(EGREPP): New.

	* bin/cygbuild.sh:
	- Fix source package generation with version number like
	  foo-0.3+git20070827
	(CygbuildCmdMkpatchMain): Shorten
	paths in messages.
	(CygbuildStrToRegexpSafe): New
	(CygbuildCmdInstallCheckReadme): Use `CygbuildStrToRegexpSafe'.
	(CygbuildCmdPkgSourceStandard): Use `CygbuildStrToRegexpSafe'.
	(CygbuildFilePackageGuessMain): Use `CygbuildStrToRegexpSafe'.
	(CygbuildDefineGlobalCommands): EGREP Replace option
	--perl-regexp with --extended-regexp. New variable EGREPP.
	(CygbuildHelpSourcePackage): Cosmetic change to displayed
	message.
	(CygbuildIsSourceProgram): New.
	(CygbuildIsGbsCompat): Use `CygbuildIsSourceProgram'
	(CygbuildPerlModuleLocation): Use `CygbuildIsSourceProgram'

2007-09-15  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	- Converted all \< and \> in egrep calls to perl syntax \b.
	(CygbuildCmdMkpatchMain): Force unapplying local patches, no
	matter what while taking the diff.
	(CygbuildPatchApplyMaybe): Added call argument modifiers options
	'-force', '-quiet' and '-nostat'.
	(CygbuildPatchCheck): Removed message that lists applied
	patches.
	(CygbuildPatchListDisplay): New.
	(CygbuildCommandMain::patch-check): Call `CygbuildPatchListDisplay'.

2007-09-14  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::OPTIONS): Document new option --bzip2.

	* etc/etc/programs.conf (GREP): Changed --extended-regexp
	to --perl-regexp. Needed for TAB \t in regexps.

	* bin/cygbuild.sh: